tests/baselines/reference/parserAccessors6(strict=true).errors.txt
parserAccessors6.ts(2,7): error TS7032: Property 'foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
parserAccessors6.ts(2,11): error TS7006: Parameter 'v' implicitly has an 'any' type.
parserAccessors6.ts(2,14): error TS1183: An implementation cannot be declared in ambient contexts.


==== parserAccessors6.ts (3 errors) ====
    declare class C {
      set foo(v) { }
          ~~~
!!! error TS7032: Property 'foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
              ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
                 ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
    }